# subst

./: LICENSE  README.md  subst.cabal
src/: Subst.hs
src/Subst/: Bound.hs  Class.hs  Free.hs  Result.hs  Scope.hs
src/Subst/Abstract/: Class.hs
src/Subst/Embed/: Class.hs
src/Subst/Retract/: Class.hs
src/Subst/Term/: Class.hs
test/lib/Test/Language/: Bidirectional.hs  Ring.hs
test/unit/: UnitTest.hs
