Name:                   subst
Version:                0.0.0
Synopsis:               Hereditary Substitutions with de Bruijn indexes.
Description:
  Hereditary Substitutions with de Bruijn indexes.
License:                BSD3
Author:                 Eric McCorkle
Maintainer:             eric@metricspace.net
Stability:              Development
Category:               Languages
Build-type:             Simple
Cabal-version:          >= 1.16
Homepage:               https://github.com/saltlang/subst
Bug-Reports:            https://github.com/saltlang/subst/issues

Source-Repository head
  Type: git
  Location: git@github.com:saltlang/subst.git


Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       test/unit test/lib
  build-depends:        base >= 4.8 && < 5, Cabal >= 1.16.0, subst, array,
                        distributive
  other-modules:        Test.Language.Ring
                        Test.Language.Bidirectional

Library
  default-language:     Haskell2010
  build-depends:        base, hashable, prelude-extras, bifunctors, distributive
  hs-source-dirs:       src/
  exposed-modules:      Subst
                        Subst.Abstract.Class
                        --Subst.Bound
                        Subst.Class
                        Subst.Embed.Class
                        Subst.Free
                        Subst.Retract.Class
                        Subst.Term.Class
